--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,34 @@
 					<div class="registration nav__registration"><a class="registration__item_a" href="#">area
 							riservata</a></div>
 
-					<ul class="menu nav__menu">
+					<button class="hamburger hamburger--slider lg-hidden sm-block" type="button">
+						<span class="hamburger-box">
+							<span class="hamburger-inner"></span>
+						</span>
+					</button>  
+
+					<ul class="menu nav__menu nav__menu_small d-none">
+							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small menu__item_a_active">home</a></li>
+							<li class="menu__item_li menu__item_li_small menu__item_li_azienda"><a href="#" class="menu__item_a menu__item_a_small">azienda</a>
+								<div class="l-submenu-container menu__submenu">
+									<ul class="submenu__ul">
+										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small">storia</a></li>
+										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small submenu__link_active">mm
+												design</a></li>
+										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small">designer</a></li>
+										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small">certificazioni</a></li>
+									</ul>
+								</div>
+							</li>
+	
+	
+	
+							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small">collezioni</a></li>
+							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small">news</a></li>
+							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small">contatti</a></li>
+						</ul>
+
+					<ul class="menu nav__menu lg-block sm-hidden">
 						<li class="menu__item_li"><a href="#" class="menu__item_a menu__item_a_active">home</a></li>
 						<li class="menu__item_li menu__item_li_azienda"><a href="#" class="menu__item_a">azienda</a>
 							<div class="l-submenu-container menu__submenu">
