--- a/app/index.html
+++ b/app/index.html
@@ -6,17 +6,10 @@
 	<meta charset="utf-8">
 
 	<title>mmlampadari</title>
-	<!-- <meta name="description" content="Startup HTML template OptimizedHTML 5"> -->
 
 	<meta name="viewport" content="width=device-width">
 
 	<link rel="icon" href="img/site-icon.png">
-	<meta property="og:image" content="img/@1x/preview.jpg">
-
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
-
-	<link type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap"
-		rel="stylesheet">
 
 	<link type="text/css" rel="stylesheet" href="css/styles.min.css">
 
@@ -29,7 +22,8 @@
 			<div class="container header__content">
 
 				<div class="logo">
-					<a class="logo__link" href="index.html"><img src="img/logo.png" class="logo__img" alt="mmlampadari"></a>
+					<a class="logo__link" href="index.html"><img src="img/logo.png" class="logo__img"
+							alt="mmlampadari"></a>
 				</div>
 
 				<nav class="nav header__nav">
@@ -40,28 +34,37 @@
 						<span class="hamburger-box">
 							<span class="hamburger-inner"></span>
 						</span>
-					</button>  
+					</button>
 
 					<ul class="menu nav__menu nav__menu_small d-none">
-							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small menu__item_a_active">home</a></li>
-							<li class="menu__item_li menu__item_li_small menu__item_li_azienda"><a href="#" class="menu__item_a menu__item_a_small">azienda</a>
-								<div class="l-submenu-container menu__submenu">
-									<ul class="submenu__ul">
-										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small">storia</a></li>
-										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small submenu__link_active">mm
-												design</a></li>
-										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small">designer</a></li>
-										<li class="submenu__item submenu__item_small"><a href="#" class="submenu__link submenu__link_small">certificazioni</a></li>
-									</ul>
-								</div>
-							</li>
-	
-	
-	
-							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small">collezioni</a></li>
-							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small">news</a></li>
-							<li class="menu__item_li menu__item_li_small"><a href="#" class="menu__item_a menu__item_a_small">contatti</a></li>
-						</ul>
+						<li class="menu__item_li menu__item_li_small"><a href="#"
+								class="menu__item_a menu__item_a_small menu__item_a_active">home</a></li>
+						<li class="menu__item_li menu__item_li_small menu__item_li_azienda"><a href="#"
+								class="menu__item_a menu__item_a_small">azienda</a>
+							<div class="l-submenu-container menu__submenu">
+								<ul class="submenu__ul">
+									<li class="submenu__item submenu__item_small"><a href="#"
+											class="submenu__link submenu__link_small">storia</a></li>
+									<li class="submenu__item submenu__item_small"><a href="#"
+											class="submenu__link submenu__link_small submenu__link_active">mm
+											design</a></li>
+									<li class="submenu__item submenu__item_small"><a href="#"
+											class="submenu__link submenu__link_small">designer</a></li>
+									<li class="submenu__item submenu__item_small"><a href="#"
+											class="submenu__link submenu__link_small">certificazioni</a></li>
+								</ul>
+							</div>
+						</li>
+
+
+
+						<li class="menu__item_li menu__item_li_small"><a href="#"
+								class="menu__item_a menu__item_a_small">collezioni</a></li>
+						<li class="menu__item_li menu__item_li_small"><a href="#"
+								class="menu__item_a menu__item_a_small">news</a></li>
+						<li class="menu__item_li menu__item_li_small"><a href="#"
+								class="menu__item_a menu__item_a_small">contatti</a></li>
+					</ul>
 
 					<ul class="menu nav__menu lg-block sm-hidden">
 						<li class="menu__item_li"><a href="#" class="menu__item_a menu__item_a_active">home</a></li>
@@ -349,7 +352,8 @@
 
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="js/scripts.min.js"></script>
 
 </body>
